--- a/public/css/general/popup.css
+++ b/public/css/general/popup.css
@@ -112,11 +112,6 @@
     margin-right: 0;
 }
 
-#transaction-header {
-    display: flex;
-    justify-content: space-between;
-}
-
 #popup-form-wrapper {
     display: flex;
     flex-direction: row;
@@ -218,6 +213,7 @@
     border-radius: 5px 0 5px 0;
     padding: 5px;
     cursor: pointer;
+    transition: var(--fast);
 }
 
 .remove-image:hover {
