--- a/public/css/pages/item.css
+++ b/public/css/pages/item.css
@@ -7,9 +7,12 @@
     height: 100%;
 }
 
+/* Top wrapper */
+
 #top-wrapper {
     display: flex;
     flex-direction: row;
+    max-height: 530px;
 }
 
 #left-wrapper {
@@ -20,11 +23,35 @@
     margin-right: 40px;
 }
 
-#product-img {
+.icon-popup {
+    font-size: 30px;
+    color: var(--clr-burgundy-100);
+    cursor: pointer;
+    transition: var(--fast);
+}
+
+.icon-popup.bx-edit:hover {
+    color: var(--clr-burgundy-80);
+}
+
+.icon-popup.bx-edit:active {
+    color: var(--clr-burgundy-60);
+}
+
+.icon-popup.bx-trash:hover {
+    color: var(--clr-red);
+}
+
+.icon-popup.bx-trash:active {
+    color: var(--clr-red-500);
+}
+
+#product-image {
     height: 400px;
     width: 400px;
     border-radius: 10px;
     object-fit: cover;
+    border: 1px solid var(--clr-burgundy-60);
 }
 
 #item-attributes-wrapper {
@@ -92,16 +119,30 @@
     width: 100%;
 }
 
-#attributes-table {
+/* Attributes table */
+
+#table-wrapper{
     border: 1px solid var(--clr-burgundy-60);
     border-radius: 10px;
     font-family: "Inter Medium";
-    overflow: scroll;
     color: var(--clr-burgundy-100);
-    max-height: 810px;
+    overflow: hidden;
 }
 
-#attributes-table thead {
+#table-content{
+    overflow: auto;
+    height: 100%;
+}
+
+#attributes-table {
+    width: 100%;
+}
+
+#attributes-table th {
+    text-align: left;
+    position: sticky;
+    top: 0;
+   
     background-color: var(--clr-pink-50);
     overflow: hidden;
     margin: 10px;
@@ -111,25 +152,31 @@
     font-size: 15px;
 }
 
-#attributes-table tbody {
+#attributes-table td {
     font-size: 14px;
 }
 
+#attributes-table th,
 #attributes-table td {
     padding: 5px 0px 5px 10px;
 }
 
-#attributes-table td:nth-child(2) {
+#attributes-table th:nth-child(2),
+#attributes-table td:nth-child(2) { 
     border-left: 1px solid var(--clr-burgundy-60);
     border-bottom: 1px solid #dedede;
 }
+
+/* Bottom wrapper */
 
 #bottom-wrapper {
     height: 500px;
 }
 
-#details-grid {
-    height: 500px;
+#transaction-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #commands {
@@ -142,25 +189,6 @@
     align-items: stretch;
 }
 
-.icon-popup {
-    font-size: 30px;
-    color: var(--clr-burgundy-100);
-    cursor: pointer;
-    transition: var(--fast);
-}
-
-.icon-popup.bx-edit:hover {
-    color: var(--clr-burgundy-80);
-}
-
-.icon-popup.bx-edit:active {
-    color: var(--clr-burgundy-60);
-}
-
-.icon-popup.bx-trash:hover {
-    color: var(--clr-red);
-}
-
-.icon-popup.bx-trash:active {
-    color: var(--clr-red-500);
+#details-grid {
+    height: 500px;
 }
